# Copyright © 2019-2023 The Pasts Contributors.
#
# Licensed under any of:
#  - Apache License, Version 2.0 (https://www.apache.org/licenses/LICENSE-2.0)
#  - Boost Software License, Version 1.0 (https://www.boost.org/LICENSE_1_0.txt)
#  - MIT License (https://mit-license.org/)
# At your choosing (See accompanying files LICENSE_APACHE_2_0.txt,
# LICENSE_MIT.txt and LICENSE_BOOST_1_0.txt).

[package]
name = "pasts"
version = "0.13.1"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "Minimal and simpler alternative to the futures crate."
repository = "https://github.com/ardaku/pasts"
documentation = "https://docs.rs/pasts"
homepage = "https://github.com/ardaku/pasts/blob/stable/CHANGELOG.md"
include = ["/examples/", "/README.md", "/src/"]
keywords = ["futures", "platform-agnostic", "cross-platform", "io", "executor"]
categories = ["asynchronous", "embedded", "no-std", "rust-patterns", "wasm"]
readme = "README.md"
edition = "2021"
autobins = false

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dev-dependencies]
async_main = { version = "0.2", features = ["pasts"] }
async-std = "1.11"
whisk = "0.10"

[target.'cfg(all(target_arch="wasm32", target_os="unknown"))'.dev-dependencies]
wasm-bindgen = "0.2"

[features]
default = ["std"]

# Target a no-std environment
std = []

# Target the DOM via javascript APIs exposed by wasm-bindgen.
web = ["dep:wasm-bindgen-futures"]

[patch.crates-io.pasts]
path = "."
