[package]
name = "pasts"
version = "0.14.3"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
description = "Minimal and simpler alternative to the futures crate."
repository = "https://github.com/ardaku/pasts"
documentation = "https://docs.rs/pasts"
homepage = "https://github.com/ardaku/pasts/blob/stable/CHANGELOG.md"
include = ["/examples/", "/README.md", "/src/"]
keywords = ["futures", "platform-agnostic", "cross-platform", "io", "executor"]
categories = ["asynchronous", "embedded", "no-std", "rust-patterns", "wasm"]
readme = "README.md"
edition = "2021"
autobins = false

[dependencies.wasm-bindgen-futures]
version = "0.4"
optional = true

[dev-dependencies]
async_main = { version = "0.4", features = ["pasts"] }
async-std = "1.11"
whisk = "0.11"

[target.'cfg(all(target_arch="wasm32", target_os="unknown"))'.dev-dependencies]
wasm-bindgen = "0.2"

[features]
default = ["std"]

# Target a no-std environment
std = []

# Target the DOM via javascript APIs exposed by wasm-bindgen.
web = ["dep:wasm-bindgen-futures"]

# [patch.crates-io.pasts]
# path = "."
